source code update

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ENVIRONMENT=dev
-API_URL=https://as-northcentralus-rtmoore-pivotalapi-dev-01.azurewebsites.net
+ENVIRONMENT=stg
+API_URL=https://as-northcentralus-rtmoore-pivotalapi-stg-01.azurewebsites.net
